# trading-stack

./: .cursorrules  .env.example  .gitignore  GO_LIVE_PLAYBOOK.md  IBKR_USAGE.md  Makefile  PHASE0_OPS_RUNBOOK.md  PHASE5_REMAINING_TASKS.md  PHASE5_RUN_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  env.example  monitor_trading_stack.ps1  mypy.ini  pyproject.toml  ruff.toml  run_phase5.bat  run_phase5.ps1  setup_env.ps1  start_all_services.ps1  start_services.ps1  start_services_with_env.ps1  start_trading_stack.ps1  stop_services.ps1  test_report_market_close.md  tight_fixes_implemented.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
configs/: dev.yaml
data/: queue.db  queue.db-shm  queue.db-wal
data/params/: runtime_SPY.json
sample_data/: events_spy_2024-09-10.csv
tests/: __init__.py  test_schemas.py  test_storage.py
tests/unit/: test_aggregator.py  test_ledger.py  test_llm_rules.py  test_metrics.py  test_positions.py  test_state_machine.py  test_tca.py
trading_stack/: __init__.py
trading_stack/accounting/: __init__.py  positions.py  realized.py  snapshot.py
trading_stack/bus/: memory_bus.py
trading_stack/core/: clock.py  schemas.py
trading_stack/dashboards/: ops.py
trading_stack/engine/: decision_engine.py
trading_stack/execution/: state_machine.py
trading_stack/ingest/: aggregators.py  metrics.py
trading_stack/ipc/: sqlite_queue.py
trading_stack/llm/: __init__.py  advisor.py  router.py
trading_stack/ops/: heartbeat.py  status.py
trading_stack/params/: __init__.py  runtime.py
trading_stack/risk/: gate.py
(+26 files in other folders)
